#7629 fix vertical jumping during maven download

--- a/js/notebook/src/shared/style/beakerx.scss
+++ b/js/notebook/src/shared/style/beakerx.scss
@@ -57,6 +57,12 @@
   }
 }
 
+.text-ellipsis * {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .bko-modal {
   position: absolute;
   left: 50%;
